kube-prometheus-stack/routes.yaml
---
##########################################################
# prometheus
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-http
  namespace: monitoring
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - orion-prometheus.pfs.pack
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-https-redirect
  namespace: monitoring
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - orion-prometheus.pfs.pack
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
##########################################################
---
# GRAFANA
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - orion-grafana.pfs.pack
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https-redirect
  namespace: monitoring
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - orion-grafana.pfs.pack
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
##########################################################
---
# alertmanager
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-http
  namespace: monitoring
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - orion-alertmanager.pfs.pack
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-https-redirect
  namespace: monitoring
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - orion-alertmanager.pfs.pack
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
##########################################################
